# mlops_zoom

./: mlflow.db  pyproject.toml
01-intro/: homework.py  homework_classbased.py  trippredictor_functional.py  trippredictor_notebook-y.py
02-experiment-tracking/: hpo_base.py  optuna_base.py  optuna_optimal.py  register_model.py  train.py
artifacts/2/06fba502e64f40fba580206da5383afa/artifacts/model/: MLmodel
artifacts/2/0dff9d03a99d404d967ac24fda7079f3/artifacts/model/: MLmodel
artifacts/2/1b1ae2cc1dd64c38bd7e5cc73b9dfd4b/artifacts/model/metadata/: MLmodel
artifacts/2/7e44466a9bcb49388db55bcce36bf58c/artifacts/model/: MLmodel
artifacts/2/9ad8acb8e4504948a577e470b4ca7413/artifacts/model/metadata/: MLmodel
mlruns/0/: meta.yaml
