[tool.poetry]
name = "mlops-zoom"
version = "0.1.0"
description = ""
authors = ["lennardong <lennard.ong@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
parquet = "^1.3.1"
scikit-learn = "^1.4.2"
jupyter = "^1.0.0"
pandas-stubs = "^2.2.2.240514"
mypy = "^1.10.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
mlflow = "^2.13.0"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
